Revamp Woodtype Again, Updated License & Russian Translation

--- a/src/main/resources/assets/create_dd/lang/ru_ru.json
+++ b/src/main/resources/assets/create_dd/lang/ru_ru.json
@@ -8,6 +8,7 @@
   "block.create_dd.black_padded_rubber_slab": "Плита из мелкой чёрной резиновой плитки",
   "block.create_dd.black_padded_rubber_stairs": "Ступеньки из мелкой чёрной резиновой плитки",
   "block.create_dd.black_padded_tiled_rubber": "Плитка из чёрной резины",
+  "block.create_dd.black_velvet_block": "Черный бархатный блок",
   "block.create_dd.blackstone_pillar": "Чернитовая колонна",
   "block.create_dd.blasting_sail": "Парус с катализатором плавления",
   "block.create_dd.blue_asphalt_block": "Синий асфальт",
@@ -16,8 +17,10 @@
   "block.create_dd.blue_padded_rubber_slab": "Плита из мелкой синей резиновой плитки",
   "block.create_dd.blue_padded_rubber_stairs": "Ступеньки из мелкой синей резиновой плитки",
   "block.create_dd.blue_padded_tiled_rubber": "Плитка из синей резины",
+  "block.create_dd.blue_velvet_block": "Синий бархатный блок",
   "block.create_dd.blueprint_block": "Чертёжный блок",
   "block.create_dd.bore_block": "Гофрированный металл",
+  "block.create_dd.brass_gearbox": "Латунная коробка передач",
   "block.create_dd.brown_asphalt_block": "Коричневый асфальт",
   "block.create_dd.brown_blueprint_block": "Коричневый чертёжный блок",
   "block.create_dd.brown_padded_mosaic_rubber": "Мелкая плитка из коричневой резины",
@@ -25,6 +28,7 @@
   "block.create_dd.brown_padded_rubber_slab": "Плита из мелкой коричневой резиновой плитки",
   "block.create_dd.brown_padded_rubber_stairs": "Ступеньки из мелкой коричневой резиновой плитки",
   "block.create_dd.brown_padded_tiled_rubber": "Плитка из коричневой резины",
+  "block.create_dd.brown_velvet_block": "Коричневый бархатный блок",
   "block.create_dd.cog_crank": "Рукоятка на шестерне",
   "block.create_dd.creative_casing": "Творческий корпус",
   "block.create_dd.cut_amethyst_block": "Резной аметистовый блок",
@@ -106,9 +110,17 @@
   "block.create_dd.cyan_padded_rubber_slab": "Плита из мелкой бирюзовой резиновой плитки",
   "block.create_dd.cyan_padded_rubber_stairs": "Ступеньки из мелкой бирюзовой резиновой плитки",
   "block.create_dd.cyan_padded_tiled_rubber": "Плитка из бирюзовой резины",
+  "block.create_dd.cyan_velvet_block": "Голубой бархатный блок",
+  "block.create_dd.dark_metal_block": "Темный металлический блок",
+  "block.create_dd.dark_metal_block_slab": "Плита из темного металлического блока",
+  "block.create_dd.dark_metal_block_stairs": "Ступеньки из темных металлических блоков",
+  "block.create_dd.dark_metal_brick_slab": "Темная металлическая кирпичная плита",
+  "block.create_dd.dark_metal_brick_stairs": "Ступеньки из темного металлического кирпича",
+  "block.create_dd.dark_metal_bricks": "Темные металлические кирпичи",
+  "block.create_dd.dark_metal_plating": "Темное металлическое покрытие",
   "block.create_dd.dolomite": "Доломит",
   "block.create_dd.dolomite_pillar": "Доломитовая колонна",
-  "block.create_dd.fluid_keg": "Жидкостный кег",
+  "block.create_dd.fluid_reservoir": "Резервуар для жидкости",
   "block.create_dd.freezing_sail": "Парус с катализатором заморозки",
   "block.create_dd.furnace_engine": "Двигатель внутреннего сгорания",
   "block.create_dd.gabbro": "Габбро",
@@ -122,6 +134,7 @@
   "block.create_dd.gray_padded_rubber_slab": "Плита из мелкой серой резиновой плитки",
   "block.create_dd.gray_padded_rubber_stairs": "Ступеньки из мелкой серой резиновой плитки",
   "block.create_dd.gray_padded_tiled_rubber": "Плитка из бирюзовой резины",
+  "block.create_dd.gray_velvet_block": "Серый бархатный блок",
   "block.create_dd.green_asphalt_block": "Зелёный асфальт",
   "block.create_dd.green_blueprint_block": "Зелёный чертёжный блок",
   "block.create_dd.green_padded_mosaic_rubber": "Мелкая плитка из зелёной резины",
@@ -129,14 +142,20 @@
   "block.create_dd.green_padded_rubber_slab": "Плита из мелкой зелёной резиновой плитки",
   "block.create_dd.green_padded_rubber_stairs": "Ступеньки из мелкой зелёной резиновой плитки",
   "block.create_dd.green_padded_tiled_rubber": "Плитка из зелёной резины",
+  "block.create_dd.green_velvet_block": "Зеленый бархатный блок",
   "block.create_dd.haunting_sail": "Парус с катализатором призрачного наполнения",
+  "block.create_dd.hazard_block": "Предупреждающий блок",
+  "block.create_dd.helm": "Helm",
   "block.create_dd.hydraulic_casing": "Гидравлический корпус",
   "block.create_dd.hydraulic_press": "Гидравлический пресс",
+  "block.create_dd.incomplete_large_water_wheel": "Незавершенное большое водяное колесо",
+  "block.create_dd.incomplete_water_wheel": "Незавершенное водяное колесо",
   "block.create_dd.industrial_casing": "Индустриальный корпус",
   "block.create_dd.industrial_fan": "Индустриальный вентилятор",
   "block.create_dd.inverse_box": "Реверсируящая коробка передач",
   "block.create_dd.item_stockpile": "Предметное сило",
   "block.create_dd.kinetic_motor": "Кинетический мотор",
+  "block.create_dd.large_cog_crank": "Большой зубчатый кривошип",
   "block.create_dd.layered_amethyst_block": "Слоистый аметисит",
   "block.create_dd.layered_basalt": "Слоистый базальт",
   "block.create_dd.layered_blackstone": "Слоистый чернит",
@@ -152,6 +171,7 @@
   "block.create_dd.light_blue_padded_rubber_slab": "Плита из мелкой голубой резиновой плитки",
   "block.create_dd.light_blue_padded_rubber_stairs": "Ступеньки из мелкой голубой резиновой плитки",
   "block.create_dd.light_blue_padded_tiled_rubber": "Плитка из голубой резины",
+  "block.create_dd.light_blue_velvet_block": "Светло-голубой бархатный блок",
   "block.create_dd.light_blueprint_block": "Голубой чертёжный блок",
   "block.create_dd.light_gray_asphalt_block": "Светло-серый асфальт",
   "block.create_dd.light_gray_blueprint_block": "Светло-серый чертёжный блок",
@@ -160,6 +180,7 @@
   "block.create_dd.light_gray_padded_rubber_slab": "Плита из мелкой светло-серой резиновой плитки",
   "block.create_dd.light_gray_padded_rubber_stairs": "Ступеньки из мелкой светло-серой резиновой плитки",
   "block.create_dd.light_gray_padded_tiled_rubber": "Плитка из светло-серой резины",
+  "block.create_dd.light_gray_velvet_block": "Светло-серый бархатный блок",
   "block.create_dd.lime_asphalt_block": "Лаймовый асфальт",
   "block.create_dd.lime_blueprint_block": "Лаймовый чертёжный блок",
   "block.create_dd.lime_padded_mosaic_rubber": "Мелкая плитка из лаймовой резины",
@@ -167,6 +188,7 @@
   "block.create_dd.lime_padded_rubber_slab": "Плита из мелкой лаймовой резиновой плитки",
   "block.create_dd.lime_padded_rubber_stairs": "Ступеньки из мелкой лаймовой резиновой плитки",
   "block.create_dd.lime_padded_tiled_rubber": "Плитка из лаймовой резины",
+  "block.create_dd.lime_velvet_block": "Блок из лаймового бархата",
   "block.create_dd.magenta_asphalt_block": "Пурпурный асфальт",
   "block.create_dd.magenta_blueprint_block": "Пурпурный чертёжный блок",
   "block.create_dd.magenta_padded_mosaic_rubber": "Мелкая плитка из пурпурной резины",
@@ -174,7 +196,9 @@
   "block.create_dd.magenta_padded_rubber_slab": "Плита из мелкой пурпурной резиновой плитки",
   "block.create_dd.magenta_padded_rubber_stairs": "Ступеньки из мелкой пурпурной резиновой плитки",
   "block.create_dd.magenta_padded_tiled_rubber": "Плитка из пурпурной резины",
-  "block.create_dd.netherrack_pillar": "Незерак колонна",
+  "block.create_dd.magenta_velvet_block": "Блок из пурпурного бархата",
+  "block.create_dd.multimeter": "Мультиметр",
+  "block.create_dd.netherrack_pillar": "Незераковая колонна",
   "block.create_dd.orange_asphalt_block": "Оранжевый асфальт",
   "block.create_dd.orange_blueprint_block": "Оранжевый чертёжный блок",
   "block.create_dd.orange_padded_mosaic_rubber": "Мелкая плитка из оранжевой резины",
@@ -182,6 +206,7 @@
   "block.create_dd.orange_padded_rubber_slab": "Плита из мелкой оранжевой резиновой плитки",
   "block.create_dd.orange_padded_rubber_stairs": "Ступеньки из мелкой оранжевой резиновой плитки",
   "block.create_dd.orange_padded_tiled_rubber": "Плитка из оранжевой резины",
+  "block.create_dd.orange_velvet_block": "Оранжевый бархатный блок",
   "block.create_dd.overburden_casing": "Корпус хранилища",
   "block.create_dd.packed_mud_pillar": "Колонна из плотной грязи",
   "block.create_dd.padded_mosaic_rubber": "Мелкая плитка из резины",
@@ -196,6 +221,7 @@
   "block.create_dd.pink_padded_rubber_slab": "Плита из мелкой розовой резиновой плитки",
   "block.create_dd.pink_padded_rubber_stairs": "Ступеньки из мелкой розовой резиновой плитки",
   "block.create_dd.pink_padded_tiled_rubber": "Плитка из розовой резины",
+  "block.create_dd.pink_velvet_block": "Розовый бархатный блок",
   "block.create_dd.polished_cut_amethyst_block": "Полированный резной аметист",
   "block.create_dd.polished_cut_amethyst_block_slab": "Плита из полированного резного аметиста",
   "block.create_dd.polished_cut_amethyst_block_stairs": "Ступеньки из полированного резного аметиста",
@@ -232,6 +258,7 @@
   "block.create_dd.polished_cut_weathered_limestone_slab": "Плита из полированного резного состаренного известняка",
   "block.create_dd.polished_cut_weathered_limestone_stairs": "Ступеньки из полированного резного состаренного известняка",
   "block.create_dd.polished_cut_weathered_limestone_wall": "Ограда из полированного резного состаренного известняка",
+  "block.create_dd.powered_flywheel": "Заряженный маховик",
   "block.create_dd.purple_asphalt_block": "Розовый асфальт",
   "block.create_dd.purple_blueprint_block": "Розовый чертёжный блок",
   "block.create_dd.purple_padded_mosaic_rubber": "Мелкая плитка из фиолетовой резины",
@@ -239,6 +266,7 @@
   "block.create_dd.purple_padded_rubber_slab": "Плита из мелкой фиолетовой резиновой плитки",
   "block.create_dd.purple_padded_rubber_stairs": "Ступеньки из мелкой фиолетовой резиновой плитки",
   "block.create_dd.purple_padded_tiled_rubber": "Плитка из фиолетовой резины",
+  "block.create_dd.purple_velvet_block": "Фиолетовый бархатный блок",
   "block.create_dd.raw_padded_mosaic_rubber": "Мелкая плитка из сырой резины",
   "block.create_dd.raw_padded_rubber": "Полированная сырая резина",
   "block.create_dd.raw_padded_rubber_slab": "Плита из мелкой сырой резиновой плитки",
@@ -252,6 +280,8 @@
   "block.create_dd.red_padded_rubber_slab": "Плита из мелкой красная резиновой плитки",
   "block.create_dd.red_padded_rubber_stairs": "Ступеньки из мелкой красной резиновой плитки",
   "block.create_dd.red_padded_tiled_rubber": "Плитка из красной резины",
+  "block.create_dd.red_velvet_block": "Красный бархатный блок",
+  "block.create_dd.redstone_divider": "Разделитель красного камня",
   "block.create_dd.rubber_block": "Блок сырой резины",
   "block.create_dd.sanding_sail": "Парус с катализатором полирования",
   "block.create_dd.sap": "Живица",
@@ -304,6 +334,8 @@
   "block.create_dd.white_padded_rubber_slab": "Плита из мелкой белой резиновой плитки",
   "block.create_dd.white_padded_rubber_stairs": "Ступеньки из мелкой белой резиновой плитки",
   "block.create_dd.white_padded_tiled_rubber": "Плитка из белой резины",
+  "block.create_dd.white_velvet_block": "Белый бархатный блок",
+  "block.create_dd.worm_gear": "Червячная передача",
   "block.create_dd.yellow_asphalt_block": "Жёлтый асфальт",
   "block.create_dd.yellow_blueprint_block": "Жёлтый чертёжный блок",
   "block.create_dd.yellow_padded_mosaic_rubber": "Мелкая плитка из жёлтой резины",
@@ -311,16 +343,22 @@
   "block.create_dd.yellow_padded_rubber_slab": "Плита из мелкой жёлтой резиновой плитки",
   "block.create_dd.yellow_padded_rubber_stairs": "Ступеньки из мелкой жёлтой резиновой плитки",
   "block.create_dd.yellow_padded_tiled_rubber": "Плитка из жёлтой резины",
+  "block.create_dd.yellow_velvet_block": "Желтый бархатный блокk",
   "create_dd.recipe.fan_freezing": "Массовая заморозка",
   "create_dd.recipe.fan_freezing.fan": "Вентилятор за рыхлым снегом",
   "create_dd.recipe.fan_sanding": "Массовое полирование",
   "create_dd.recipe.fan_sanding.fan": "Вентилятор за песком",
   "create_dd.recipe.fan_seething": "Массовое кипячение",
   "create_dd.recipe.fan_seething.fan": "Вентилятор за супер нагретым всполохом",
+  "create_dd.recipe.hydraulic_compacting": "Гидравлическое уплотнение",
+  "entity.create_dd.boat_contraption": "Хитроумное устройство для лодки",
   "entity.create_dd.inert_blazeling": "Всполошик",
   "entity.create_dd.seething_ablaze": "Кипящий всполох",
   "fluid.create_dd.sap": "Живица",
+  "item.create_dd.abstruse_mechanism": "Непонятный механизм",
   "item.create_dd.bury_blend": "Похоронный сплав",
+  "item.create_dd.calculation_mechanism": "Расчетный механизм",
+  "item.create_dd.clockwork_crossbow": "Заводной арбалет",
   "item.create_dd.coal_piece": "Кусочек угля",
   "item.create_dd.deforester_saw": "Лесоуничтожитель",
   "item.create_dd.diamond_shard": "Осколок алмаза",
@@ -330,8 +368,22 @@
   "item.create_dd.gilded_rose_pickaxe": "Позолоченная кирка из розового кварца",
   "item.create_dd.gilded_rose_shovel": "Позолоченная лопата из розового кварца",
   "item.create_dd.gilded_rose_sword": "Позолоченный меч из розового кварца",
+  "item.create_dd.hazard_block_r": "NA | НЕДОПУСТИМЫЙ ЭЛЕМЕНТ",
+  "item.create_dd.horizontal_hazard_block": "NA | НЕДОПУСТИМЫЙ ЭЛЕМЕНТ",
+  "item.create_dd.horizontal_hazard_block_r": "NA | НЕДОПУСТИМЫЙ ЭЛЕМЕНТ",
+  "item.create_dd.incomplete_abstruse_mechanism": "Незавершенный заумный механизм",
+  "item.create_dd.incomplete_calculation_mechanism": "Незавершенный Расчетный механизм",
+  "item.create_dd.incomplete_inductive_mechanism": "NA | НЕДОПУСТИМЫЙ ЭЛЕМЕНТ",
+  "item.create_dd.incomplete_infernal_mechanism": "Незавершенный Адский механизм",
+  "item.create_dd.incomplete_integrated_circuit": "Неполная интегральная схема",
+  "item.create_dd.incomplete_integrated_mechanism": "Незавершенный комплексный механизм",
   "item.create_dd.incomplete_kinetic_mechanism": "Незаконченный кинетический механизм",
+  "item.create_dd.incomplete_sealed_mechanism": "Неполноценный герметичный механизм",
+  "item.create_dd.inductive_mechanism": "NA | НЕДОПУСТИМЫЙ ЭЛЕМЕНТ",
   "item.create_dd.inert_blazeling_spawn_egg": "Яйцо призыва всполошика",
+  "item.create_dd.infernal_mechanism": "Адский механизм",
+  "item.create_dd.integrated_circuit": "Интегральная схема",
+  "item.create_dd.integrated_mechanism": "Интегрированный механизм",
   "item.create_dd.kinetic_mechanism": "Кинетический механизм",
   "item.create_dd.lapis_alloy": "NA | Недействительный предмет",
   "item.create_dd.lapis_lazuli_shard": "Осколок лазурита",
@@ -341,10 +393,20 @@
   "item.create_dd.reversed_gearshift": "NA | Недействительный предмет",
   "item.create_dd.rubber": "Резина",
   "item.create_dd.sap_bucket": "Ведро живицы",
+  "item.create_dd.sealed_mechanism": "Герметичный механизм",
   "item.create_dd.seething_ablaze_powder": "Кипящий огненный порошок",
   "item.create_dd.seething_ablaze_rod": "Кипящий огненный стержень",
   "item.create_dd.seething_ablaze_spawn_egg": "Яйцо призыва кипящего всполоха",
+  "item.create_dd.steel_block": "NA | INVALID ITEM",
+  "item.create_dd.steel_casing": "NA | INVALID ITEM",
+  "item.create_dd.steel_polished_block": "NA | INVALID ITEM",
+  "item.create_dd.steel_polished_slab": "NA | INVALID ITEM",
+  "item.create_dd.steel_polished_stairs": "NA | INVALID ITEM",
+  "item.create_dd.steel_tiled_block": "NA | INVALID ITEM",
+  "item.create_dd.steel_tiled_slab": "NA | INVALID ITEM",
+  "item.create_dd.steel_tiled_stairs": "NA | INVALID ITEM",
   "itemGroup.create_dd.base": "Create: Dreams n' Desires",
   "itemGroup.create_dd.beta": "Dreams n' Desires БЕТА предметы",
+  "itemGroup.create_dd.classic": "DnDesires Classic Stuff",
   "itemGroup.create_dd.palettes": "Dreams n' Desires Строительные блоки"
 }
